@@ -10,6 +10,8 @@
 
     <link rel="shortcut icon" href="{{ MEDIA_URL }}/images/favicon.ico">
 
+    {% include "ie6_nomore.html" %}
+
     {% compress css %}
     <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ MEDIA_URL }}css/reset.css" /> <!-- RESET -->
     <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ MEDIA_URL }}css/main.css" /> <!-- MAIN STYLE SHEET -->
